--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -3,31 +3,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>TAREA HTML DE PATRICIA CASTILLO</title>
-</head>
+    <link rel="stylesheet" href="./styles.css">  </head>
 
 <body>
-    <div>
+    <div class="divClass">
         <h1> Patricia Castillo</h1>
         <h3>Henry</h3>
         <h4>Tarea de HTML/CSS</h4>
     </div>
-    <div> <span>mi comida favorita se llama Sandroppiza, es una pizza que tiene papas fritas y huevo
-            es grande
-        </span>
+    <div class="divClass">
+        <span id="spanId">mi comida favorita es una pizza que tiene papas fritas y huevos fritos </span>
+
         <a
-            href="https://www.tripadvisor.com.ar/Restaurant_Review-g793397-d4839151-Reviews-Sandro_Pizza-Garanhuns_State_of_Pernambuco.html"></a>
+            href="https://www.tripadvisor.com.ar/Restaurant_Review-g793397-d4839151-Reviews-Sandro_Pizza-Garanhuns_State_of_Pernambuco.html">
+            link a restaurante</a>
+
     </div>
-    <div>
+    <div id="thirdDiv">
         <ul>
-            <li> elemento 1 <img
-                    src="https://ar.worldorgs.com/catalogar/san-miguel-de-tucum%C3%A1n/pizza-para-llevar/il-barto-pizzas-y-algo-zona-sur"/>
+            <li> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoqnI1OGZvOmqLjAkB8BU036Q3MqqvCmTRvQ&usqp=CAU" />
             </li>
-            <li> elemento 2 <img
-                    src="https://www.facebook.com/434536706590054/photos/a.708454729198249/3931803703529986/?__cft__[0]=AZUfOjkPxol8B873R_9u4UDWkIMTVmY83Ua1o4gLj3UwPCdLUMrvI7RvXh8baEGmD6UnpBQRXiiE-QxXc5bx8z-OmmEMa9rEIbIOA4T1OpTRETV34z6cEvt058ZTJ0z6LtNoVfOxnPUz7zwxWwBxmMMj&__tn__=EH-R"/>
+            <li> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0ch_u5K4Zu_zNCVRo7BxUGuXbr3D2pjCTZw&usqp=CAU" />
             </li>
         </ul>
     </div>
